footer created with responsive

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,23 @@
       class="w-[400px] h-[400px] bg-red-400 mt-6 border-[3.5px] border-green-800 border-dashed md:hover:bg-pink-500 sm:w-[100px] max-900:hover:bg-red-400"
     ></div>
 
+    <footer>
+      <h>Foooter</h>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iusto
+        suscipit similique earum iste! Distinctio quod fuga porro quisquam
+        possimus numquam et quia deserunt, delectus ex odio? Perferendis, alias.
+        Ipsam reprehenderit placeat iusto iste tempora laborum doloremque ipsum
+        deserunt cumque, molestias culpa eos ullam, natus perspiciatis cum
+        suscipit quos praesentium voluptates non officia. Doloremque,
+        repellendus eius labore earum enim deserunt! Non ut debitis consequuntur
+        voluptatum quasi sunt quos voluptatem unde vero tempore quae, rem
+        laborum? Temporibus beatae, dicta earum ipsum explicabo facilis harum
+        reprehenderit, iusto cum aspernatur excepturi esse repellat. Non
+        accusamus nemo dolorem ipsam magnam error, impedit quisquam voluptatem.
+      </p>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module">
       const swiper = new Swiper('.swiper', {
