--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,23 @@
 
     <h1 class="font-fozil">FozilKHon</h1>
 
+    <section>
+      <h1 style="color: red; font-size: 100px">SHowcase</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores harum
+        iure necessitatibus, repellendus autem vero, ipsa aliquid culpa quo,
+        animi repellat facilis laborum fuga nobis? Id cupiditate, accusantium
+        repellat amet vel ullam placeat obcaecati magnam maiores ex consectetur!
+        Repellat iure fugit, sapiente nisi maiores aliquam est numquam
+        dignissimos neque dolor cum. Consectetur asperiores amet iste omnis
+        molestias ea voluptatum rem rerum quaerat esse distinctio, blanditiis
+        aliquid culpa sequi quas delectus deleniti vero recusandae neque
+        accusantium sit tempora laborum vitae. Eligendi possimus quasi, iure
+        rerum eius minus, fuga non unde quidem voluptas reiciendis quod quae
+        dicta. Ut quis saepe optio nesciunt.
+      </p>
+    </section>
+
     <div class="swiper w-[100%] h-[300px]">
       <div class="swiper-wrapper">
         <div class="swiper-slide bg-red-900 text-white">Slide 1</div>
